--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,26 @@
 atomicwrites==1.4.0
 attrs==21.4.0
+cfgv==3.3.1
 colorama==0.4.4
+distlib==0.3.6
 Django==2.2.9
+filelock==3.9.0
+identify==2.5.18
 iniconfig==1.1.1
+nodeenv==1.7.0
 packaging==21.3
+platformdirs==3.0.0
 pluggy==1.0.0
+pre-commit==3.0.4
 py==1.11.0
 pyparsing==3.0.7
 pytest==6.2.5
 pytest-django==3.8.0
 pytest-pythonpath==0.7.3
 pytz==2021.3
+PyYAML==6.0
 six==1.15.0
 sqlparse==0.4.2
+toml==0.10.2
 tomli==2.0.0
+virtualenv==20.19.0
